--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,7 +1,7 @@
 <html class="no-js">
   {{> head}}
   <body>
-    {{{contents}}}
-  {{> scripts}}
+    {{{typogrFormat contents}}}
+    {{> scripts}}
   </body>
 </html>
