--- a/partials/head.html
+++ b/partials/head.html
@@ -5,4 +5,5 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/main.css">
+  <title>Page Title</title>
 </head>
