--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,12 +1,12 @@
 html {
   box-sizing: border-box;
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
