load models via frontmatter, wires up example collections

--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -2,8 +2,8 @@
 <html class="no-js">
   {{> head}}
   <body class="{{dashcase path}}-page{{#if paths.dir}} {{dirname paths.dir}}-route{{/if}}">
+    <a href="/">Home</a>
     {{{typogrFormat contents}}}
     {{> scripts}}
-    {{#if debugMode}}<pre>{{stringifyFormat this}}</pre>{{/if ~}}
   </body>
 </html>
