block partial technique

--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -1,9 +1,3 @@
-<!doctype html>
-<html class="no-js">
-  {{> head}}
-  <body class="{{dashcase path}}-page{{#if paths.dir}} {{dirname paths.dir}}-route{{/if}}">
-    <a href="/">Home</a>
-    {{{typogrFormat contents}}}
-    {{> scripts}}
-  </body>
-</html>
+{{#> layout}}
+  {{{typogrFormat contents }}}
+{{/layout}}
