--- a/layouts/collection.hbs
+++ b/layouts/collection.hbs
@@ -1,6 +1,6 @@
 {{#> layout}}
   {{#each collection1}}
-    <h2><a href="{{paths.href}}">{{title}}</a></h2>
+    <h2><a href="{{paths.href}}">{{{typogrFormat title}}}</a></h2>
     {{date}}
   {{/each}}
 {{/layout}}
