hooks up post scripts and styles

--- a/layouts/collection.hbs
+++ b/layouts/collection.hbs
@@ -1,5 +1,5 @@
 {{#> layout}}
-  {{#each collection1}}
+  {{#each posts}}
     <h2><a href="{{paths.href}}">{{{typogrFormat title}}}</a></h2>
     {{date}}
   {{/each}}
