ms webpack init

--- a/partials/layout.hbs
+++ b/partials/layout.hbs
@@ -2,7 +2,7 @@
 <html class="no-js">
   {{> head}}
   <body class="{{#if paths.dir}}{{stem paths.href}}-page{{else}}{{paths.name}}-page{{/if}}{{#if paths.dir}} {{segments paths.dir '0' '1'}}-route{{/if}}">
-    <a href="/">Home</a>
+    <a href="/">Homes</a>
 {{> @partial-block }}
     {{> scripts}}
   </body>
