--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,4 +1,6 @@
-<script src="/scripts/bundle.js"></script>
+{{#each webpack.assetsByType.js}}
+<script src="/scripts/{{this}}"></script>
+{{/each}}
 {{#each scripts}}
 <script src="{{this}}" charset="utf-8"></script>
 {{/each}}
