diff metalsmith-webpack pkg which provides webpack meta

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,6 +1,4 @@
-{{#each webpack.assetsByType.js}}
-<script src="/scripts/{{this}}"></script>
-{{/each}}
+<script src="/scripts/{{#if devBuild}}main.js{{else}}main.{{webpackStats.hash}}.js{{/if}}"></script>
 {{#each scripts}}
 <script src="{{this}}" charset="utf-8"></script>
 {{/each}}
