--- a/partials/head.hbs
+++ b/partials/head.hbs
@@ -5,25 +5,25 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{description}}">
-  <meta name="news_keywords" content="{{keywords}}" />
+  {{~#if keywords}}<meta name="news_keywords" content="{{keywords}}" />{{/if}}
   <meta name="standout" content="{{url}}{{paths.href}}" />
   <meta property="og:site_name" content="{{name}}" />
   <meta property="og:description" content="{{description}}" />
   <meta property="og:title" content="{{capitalize title}} - {{name}}" />
   <meta property="og:url" content="{{url}}{{paths.href}}" />
   <meta property="og:type" content="article" />
-  {{#if socialImage}}<meta property="og:image" content="{{socialImage}}" />{{/if}}
+  {{~#if socialImage}}<meta property="og:image" content="{{socialImage}}" />{{/if}}
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="{{twitterHandle}}" />
   <meta name="twitter:title" content="{{title}} - {{name}}" />
   <meta name="twitter:description" content="{{description}}" />
   <meta name="twitter:creator" content="{{name}}" />
-  <meta name="twitter:domain" content="{{url}}>" />
-  {{#if socialImage}}<meta name="twitter:image" content="{{socialImage}}" />{{/if}}
-  {{#if googleVerification}}<meta name="google-site-verification" content="{{googleVerification}}" />{{/if}}
+  <meta name="twitter:domain" content="{{domain}}>" />
+  {{~#if socialImage}}<meta name="twitter:image" content="{{socialImage}}" />{{/if}}
+  {{~#if googleVerification}}<meta name="google-site-verification" content="{{googleVerification}}" />{{/if}}
   <link rel="author" href="humans.txt" />
   {{#each styles}}
-    <link rel="stylesheet" href="{{this}}">
+  <link rel="stylesheet" href="{{this}}">
   {{/each}}
   {{#unless noMainStyles}}
   <link rel="stylesheet" href="{{assetPath}}{{#if devBuild}}styles/main.css{{else}}{{fingerprint.[styles/main.css]}}{{/if}}">
