--- a/partials/head.hbs
+++ b/partials/head.hbs
@@ -29,11 +29,11 @@
   {{/if}}
   <link rel="author" href="humans.txt" />
   {{#each styles}}
-  <link rel="stylesheet" href="{{this}}">
+  <link rel="stylesheet" href="{{this}}"
   {{/each}}
   {{#unless noMainStyles}}
   <link rel="stylesheet" href="{{assetPath}}{{#if devBuild}}styles/main.css{{else}}{{fingerprint.[styles/main.css]}}{{/if}}">
   {{/unless}}
-  <title>{{#if title}}{{capitalize title}}{{else}}{{capitalize paths.dir}}{{/if}} {{titleSeperator}} {{name}}</title>
+  <title>{{#if title}}{{capitalize title}}{{else}}{{capitalize paths.dir}}{{/if}} {{titleSeperator}}{{name}}</title>
 <!-- {{#if devBuild}}dev{{else}}production{{/if}} v{{version}} -->
 </head>
